# pulse

./: .dockerignore  .gitignore  .npmrc  .prettierignore  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.workspace.ts
.github/workflows/: ci.yml
apps/analytics-service/: package.json  tsconfig.json  vitest.config.ts
apps/analytics-service/src/: app.module.ts  app.test.ts  main.ts  (+1 more)
apps/api-gateway/: package.json  vitest.config.ts
apps/chat-service/: package.json  tsconfig.build.json  vitest.config.ts
apps/ml-service/: README.md  package.json  pyproject.toml
apps/ml-service/app/: main.py
apps/recommendation-service/: package.json
apps/sentiment-service/: package.json  vitest.config.ts
apps/video-capture-service/: package.json
apps/video-service/: package.json
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/: demo.md  metrics.md
docs/adr/: 0001-event-contracts.md  0002-drizzle-orm.md  0002-service-discovery.md  0003-sponsor-relevance-scoring.md  0004-analytics-metrics-and-windowing.md  0005-observability-backend.md  0006-service-discovery-and-config.md  README.md
docs/demo/: pulse-demo.md
infra/docker/: .gitkeep  Dockerfile.ml  Dockerfile.nestjs  Dockerfile.web  docker-compose.yml
infra/k8s/: .gitkeep  api-gateway.yaml  chat-service.yaml  ml-service.yaml  namespace.yaml
scripts/: demo-seed.ts  set-github-about.sh
tests/fixtures/: lexicon.json  sentiment-inputs.json  sponsor-detection-inputs.json
(+84 files in other folders)
